--- a/.github/workflows/hello_world.yml
+++ b/.github/workflows/hello_world.yml
@@ -6,7 +6,9 @@ name: Hello World
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches:
+    - master
+    - develop
   pull_request:
     branches: [ master ]
 
@@ -16,14 +18,15 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  hello-world:
+  hello-world-ubuntu:
+    name: Hello world Ubuntu
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout repository 
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
@@ -35,8 +38,10 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-
+          
   hello-world-windows:
+    name: Hello world Windows
+    needs: [ hello-world-ubuntu ]
     runs-on: windows-latest
     
     steps:
