--- a/.github/workflows/hello_world.yml
+++ b/.github/workflows/hello_world.yml
@@ -41,9 +41,19 @@ jobs:
           
   hello-world-windows:
     name: Hello world Windows
-    needs: [ hello-world-ubuntu ]
     runs-on: windows-latest
     
     steps:
       - name: Print Hello World Windows
-        run: echo 'Hello world rodando no windows'
+        run: echo 'Hello world rodando no Windows'
+        
+  hello-world-macos:
+    name: Hello world MacOS
+    runs-on: macos-latest
+    needs:
+      - hello-world-ubuntu
+      - hello-world-windows
+      
+    steps:
+      - name: Print Hello World MacOS
+        run: echo 'Hello world rodando no MacOS
